:sparkles: Feat: schedule 반환값에 대한 필터 추가
<footer>
- 관련: #120